# ayla-iot-unofficial

./: .gitignore  README.md  pyproject.toml  requirements.test.txt  requirements.txt  setup.py
.github/workflows/: dependabot.yml  pypi-build.yml  pypi.yml  testpypi-publish.yml
ayla_iot_unofficial/: ayla_iot_unofficial.py  device.py  exc.py
src/ayla_iot_unofficial/: __init__.py  ayla_iot_unofficial.py  const.py  device.py  fujitsu_consts.py  fujitsu_hvac.py
tests/: ayla_iot_unofficial.py  conftest.py
