[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ayla-iot-unofficial"
version = "1.0.0"
authors = [
  { name="Reward One", email="rewardone@gmail.com" },
]
description = "Python API for Ayla IoT products"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rewardone/ayla-iot-unofficial"
"Bug Tracker" = "https://github.com/rewardone/ayla-iot-unofficial/issues"