[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ayla_iot_unofficial"
version = "1.3.1"
authors = [
  { name="Reward One", email="rewardone@gmail.com" },
]
description = "Python API for Ayla IoT products"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/rewardone/ayla-iot-unofficial"
"Bug Tracker" = "https://github.com/rewardone/ayla-iot-unofficial/issues"
