[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ayla_iot_unofficial_crevetor"
version = "1.3.1"
authors = [
  { name="Crevetor", email="a.reversat@gmail.com" },
]
description = "Python API for Ayla IoT products (crevetor fork)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/crevetor/ayla-iot-unofficial"
"Bug Tracker" = "https://github.com/crevetor/ayla-iot-unofficial/issues"
